@@ -1,6 +1,7 @@
 package seedu.address.model.util;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -25,33 +26,36 @@ public class SampleDataUtil {
         return new Person[] {
             new Person(new Name("Alex Yeoh"), new Phone("87438807"), new Email("alexyeoh@example.com"),
                 new Address("Blk 30 Geylang Street 29, #06-40"),
-                getTagSet("friends")),
+                getTagSet("Celebrity")),
             new Person(new Name("Bernice Yu"), new Phone("99272758"), new Email("berniceyu@example.com"),
                 new Address("Blk 30 Lorong 3 Serangoon Gardens, #07-18"),
-                getTagSet("colleagues", "friends")),
+                getTagSet("Celebrity")),
             new Person(new Name("Charlotte Oliveiro"), new Phone("93210283"), new Email("charlotte@example.com"),
                 new Address("Blk 11 Ang Mo Kio Street 74, #11-04"),
-                getTagSet("neighbours")),
+                getTagSet("Hairdresser", "MakeupArtist")),
             new Person(new Name("David Li"), new Phone("91031282"), new Email("lidavid@example.com"),
                 new Address("Blk 436 Serangoon Gardens Street 26, #16-43"),
-                getTagSet("family")),
+                getTagSet("CameraMan")),
             new Person(new Name("Irfan Ibrahim"), new Phone("92492021"), new Email("irfan@example.com"),
                 new Address("Blk 47 Tampines Street 20, #17-35"),
-                getTagSet("classmates")),
+                getTagSet("CameraMan")),
             new Person(new Name("Roy Balakrishnan"), new Phone("92624417"), new Email("royb@example.com"),
                 new Address("Blk 45 Aljunied Street 85, #11-31"),
-                getTagSet("colleagues"))
+                getTagSet("Chauffeur")),
         };
     }
 
     public static Event[] getSampleEvents() {
         return new Event[] {
-            new Event(new EventName("CS2103T Tutorial"), new Time("2021-10-01 14:00"),
-                new Venue("Hall"), getSamplePersons()[0], Arrays.asList(getSamplePersons())),
-            new Event(new EventName("CS2103T Lecture"), new Time("2021-10-02 14:00"),
-                new Venue("LT1"), getSamplePersons()[1], Arrays.asList(getSamplePersons())),
-            new Event(new EventName("CS2103T Lab"), new Time("2021-10-03 14:00"),
-                new Venue("COM1-02-01"), getSamplePersons()[2], Arrays.asList(getSamplePersons())),
+            new Event(new EventName("Oscars"), new Time("2021-10-01 14:00"),
+                new Venue("Hollywood"), getSamplePersons()[0],
+                List.of(getSamplePersons()[2], getSamplePersons()[3], getSamplePersons()[4])),
+            new Event(new EventName("Photo Shoot"), new Time("2021-10-02 14:00"),
+                new Venue("Park"), getSamplePersons()[1],
+                List.of(getSamplePersons()[2], getSamplePersons()[3], getSamplePersons()[4])),
+            new Event(new EventName("Brand Event"), new Time("2021-10-03 14:00"),
+                new Venue("Mall"), getSamplePersons()[1],
+                List.of(getSamplePersons()[2], getSamplePersons()[3], getSamplePersons()[4])),
         };
     }
 
